Translate: Set auto width for translation sets to avoid overlap.
Props costdev, presskopp
See #6037

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@11493 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
@@ -358,6 +358,10 @@ h2 + .project-description {
 	font-size: 16px;
 }
 
+.with-sub-projects #translation-sets {
+	width: auto;
+}
+
 @media screen and (max-width: 960px) {
 	.with-sub-projects {
 		margin-left: 0;
@@ -367,7 +371,6 @@ h2 + .project-description {
 	.with-sub-projects #translation-sets {
 		float: none;
 		margin: 0;
-		width: 100%;
 	}
 
 	#translation-sets {
